{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 85,
  "lineage": "7ebe966d-85ce-11be-d4f4-85b119fcf909",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "customer-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0849a313b038afda0",
            "arn": "arn:aws:ec2:us-west-2:055638961298:instance/i-0f59f72cc996e3ea0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f59f72cc996e3ea0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stella-infra-us-west-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0365062d9e7a677",
            "private_dns": "ip-11-0-1-19.us-west-2.compute.internal",
            "private_ip": "11.0.1.19",
            "public_ip": "52.13.14.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0696ad8beba777f19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d1e1ae8c82dcb85a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008064974efd2a4c5",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d1e1ae8c82dcb85a"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon-linux-2",
            "module.bastion.aws_security_group.ec2-sg",
            "module.bastion.data.template_file.userdata",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:security-group/sg-0d1e1ae8c82dcb85a",
            "description": "sequent-bastion-dev-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1e1ae8c82dcb85a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sequent-bastion-dev-sg",
            "name_prefix": "",
            "owner_id": "055638961298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-bastion-dev-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-bastion-dev-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-node-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:security-group/sg-05ff289dce05bd977",
            "description": "eks-node-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ff289dce05bd977",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sequent-eks-node-dev-sg",
            "name_prefix": "",
            "owner_id": "055638961298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-eks-node-dev-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-eks-node-dev-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_db_subnet_group.customer-subnet-group",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_route_table_association.private_rt_1_association",
            "module.vpc.aws_route_table_association.public_rt_1_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "customer-vpc-endpoint-s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:vpc-endpoint/vpce-0d89395c9f88befa9",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-0d89395c9f88befa9",
            "owner_id": "055638961298",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0c70fcf794982cfed"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_db_subnet_group.customer-subnet-group",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_route_table_association.private_rt_1_association",
            "module.vpc.aws_route_table_association.public_rt_1_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "customer-rds-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:security-group/sg-0de119d63108485ea",
            "description": "sequent-rds-dev-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de119d63108485ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "bastion security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d1e1ae8c82dcb85a"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "rds security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-05ff289dce05bd977"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sequent-rds-dev-sg",
            "name_prefix": "",
            "owner_id": "055638961298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-eks-node-dev-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-eks-node-dev-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.bastion.aws_security_group.ec2-sg",
            "module.eks.aws_security_group.eks-node-security-group",
            "module.vpc.aws_db_subnet_group.customer-subnet-group",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_route_table_association.private_rt_1_association",
            "module.vpc.aws_route_table_association.public_rt_1_association",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "customer-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df106737400f530e",
            "association_id": "eipassoc-0a5a32512054962ef",
            "domain": "vpc",
            "id": "eipalloc-0df106737400f530e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-08e9e550254d599e4",
            "private_dns": "ip-11-0-1-122.us-west-2.compute.internal",
            "private_ip": "11.0.1.122",
            "public_dns": "ec2-54-189-248-34.us-west-2.compute.amazonaws.com",
            "public_ip": "54.189.248.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-eip-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-eip-dev",
              "Terraform": "True"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "customer-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:internet-gateway/igw-0bc18f6cc9ca65809",
            "id": "igw-0bc18f6cc9ca65809",
            "owner_id": "055638961298",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-igw-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-igw-dev",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "customer-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df106737400f530e",
            "connectivity_type": "public",
            "id": "nat-02bfe22c19bd38e56",
            "network_interface_id": "eni-08e9e550254d599e4",
            "private_ip": "11.0.1.122",
            "public_ip": "54.189.248.34",
            "subnet_id": "subnet-008064974efd2a4c5",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-igw-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-igw-dev",
              "Terraform": "True"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:route-table/rtb-0c70fcf794982cfed",
            "id": "rtb-0c70fcf794982cfed",
            "owner_id": "055638961298",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02bfe22c19bd38e56",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-private-rt-dev-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-private-rt-dev-1",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:route-table/rtb-03280975f05392444",
            "id": "rtb-03280975f05392444",
            "owner_id": "055638961298",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc18f6cc9ca65809",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-public-rt-dev-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-public-rt-dev-1",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d647b9471ec53b46",
            "route_table_id": "rtb-0c70fcf794982cfed",
            "subnet_id": "subnet-00fe1a7de7380eea1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db4cc0b721f4989d",
            "route_table_id": "rtb-0c70fcf794982cfed",
            "subnet_id": "subnet-0018f73dafb3684cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec7b2c8b622b1b51",
            "route_table_id": "rtb-0c70fcf794982cfed",
            "subnet_id": "subnet-0c2244cb50a90c328"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b8b8a1c9644ef93",
            "route_table_id": "rtb-03280975f05392444",
            "subnet_id": "subnet-008064974efd2a4c5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04082844c79c6a6d8",
            "route_table_id": "rtb-03280975f05392444",
            "subnet_id": "subnet-0a99b9d03891169d9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071a73a8696781f8b",
            "route_table_id": "rtb-03280975f05392444",
            "subnet_id": "subnet-00197428310fc6398"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:subnet/subnet-00fe1a7de7380eea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fe1a7de7380eea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055638961298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-private-subnet-0",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-private-subnet-0",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:subnet/subnet-0018f73dafb3684cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0018f73dafb3684cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055638961298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-private-subnet-1",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-private-subnet-1",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:subnet/subnet-0c2244cb50a90c328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "11.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2244cb50a90c328",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055638961298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-private-subnet-2",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-private-subnet-2",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.customer-eip",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_nat_gateway.customer-igw",
            "module.vpc.aws_route_table.private_rt_1",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:subnet/subnet-008064974efd2a4c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008064974efd2a4c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "055638961298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-public-subnet-0",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned ",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-public-subnet-0",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned ",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:subnet/subnet-0a99b9d03891169d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a99b9d03891169d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "055638961298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-public-subnet-1",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned ",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-public-subnet-1",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned ",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:subnet/subnet-00197428310fc6398",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00197428310fc6398",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "055638961298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-public-subnet-2",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned ",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-public-subnet-2",
              "Terraform": "True",
              "kubernetes.io/cluster/sequent-eks-cluster-dev": "owned ",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0cb88cdd74f286f7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.customer-igw",
            "module.vpc.aws_route_table.public_rt_1",
            "module.vpc.aws_vpc.customer-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customer-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:055638961298:vpc/vpc-0cb88cdd74f286f7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-05b1ad77364ba86f4",
            "default_route_table_id": "rtb-0c269253d840b9184",
            "default_security_group_id": "sg-06d1370785c3ecf45",
            "dhcp_options_id": "dopt-efddc88d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cb88cdd74f286f7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c269253d840b9184",
            "owner_id": "055638961298",
            "tags": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-dev",
              "Terraform": "True"
            },
            "tags_all": {
              "Customer": "sequent",
              "Environment": "dev",
              "Name": "sequent-dev",
              "Terraform": "True"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}